# claudiobooks

./: .gitignore  CLAUDE.md
.claude/commands/: add-audiobook.md  convert-book.md  process-issues.md
.github/ISSUE_TEMPLATE/: add-audiobook.md
.github/workflows/: ci.yml
pipeline/: fetch.py  generate_cover.py  pyproject.toml  tts.py
site/: astro.config.mjs
site/src/: content.config.ts
site/src/components/: AudioPlayer.astro  AudiobookCard.astro
site/src/content/audiobooks/: adventures-of-huckleberry-finn.md  alices-adventures-in-wonderland.md  candide.md  crime-and-punishment.md  crome-yellow.md  dracula.md  frankenstein.md  heart-of-darkness.md  jekyll-and-hyde.md  macbeth.md  picture-of-dorian-gray.md  pride-and-prejudice.md  salome.md  the-time-machine.md  treasure-island.md  twenty-thousand-leagues-under-the-sea.md
site/src/layouts/: BaseLayout.astro
site/src/pages/: about.astro  feed.xml.ts  index.astro  subscribe.astro
site/src/pages/audiobook/: [...slug].astro
